# navi-tagger

./: .gitignore  Cargo.tom  Cargo.toml  Dockerfile  docker-compose.yml
.github/workflows/: docker-publish.yml  release.yml
src/: index.html  main.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/icons/: icon.icns
src-tauri/permissions/: commands.json
src-tauri/src/: main.rs
