[package]
name = "navi-tagger"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.8"
lofty = "0.20"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
tower-http = "0.6.8"
