[package]
name = "navi-tagger"
version = "3.0.0"
edition = "2024"

[dependencies]
tauri = { version = "2.1", features = ["tray-icon"] }
lofty = "0.20"
reqwest = { version = "0.13", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2.0", features = [] }
